--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,11 @@ dependencies:
   get: ^4.6.6
   flutter_screenutil: ^5.9.3
   package_info_plus: ^8.1.0
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  http: ^1.2.2
+  cached_network_image: ^3.4.1
+  shimmer: ^3.0.0
 
 
 dev_dependencies:
